--- a/01_Matematica_Ciencias_Datos/Leccion01/Jose_Aguilar_Tarea1.tex
+++ b/01_Matematica_Ciencias_Datos/Leccion01/Jose_Aguilar_Tarea1.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 11pt]{article}
+\documentclass[letterpaper, 11pt]{article}
 \usepackage{comment} % habilita el uso de comentarios en varias lineas (\ifx \fi) 
 \usepackage{lipsum} %Este paquete genera texto del tipo  Lorem Ipsum. 
 \usepackage{fullpage} % cambia el margen
@@ -12,21 +12,17 @@
 \large\textbf{Tarea 1} \\
 \textbf{Resumen del libro "How to Lie with Statistics" de Darrell Huff} \\
 \normalsize Matemática para la Ciencia de Datos \\
-Alumno: Jose Aguilar\hfill 2/4/19 \\
+Alumno: Jose Aguilar\hfill 2/Abril/2019 \\
 
-\cite(Huff:1993:LS:1098683) 
 
 \section*{Capítulo 1: La muestra con el sesgo incorporado}
 \selectlanguage{spanish}
 
-En el reportaje de Yale es la primera gran enseñanza del libro ingreso promedio de \textdollar{25.000} muestra los errores en el muestreo dado que es más fácil encontrar a los que les ha ido bien estos seres que la cifra de forma importante. A los que no les ha ido bien, o no responden o no son localizables. Además, las encuestas de revistas muestran que no siempre se dice la verdad cuando los logran localizar.
+En el reportaje de Yale está la primera gran enseñanza del libro. En este se menciona el ingreso promedio de \textdollar{25.000} de los egresados de Yale, y utilizando este ejemplo muestra los errores en el muestreo, los cuales se dan porque es más fácil encontrar a los egresados a los que les ha ido bien económicamente, con lo que se sesga esta cifra hacia esos individuos de forma importante. Aquellos egresados a los que no les ha ido tan bien, o no responden o no son localizables por esta misma razon. Además, se utiliza un ejemplo de unas encuestas de las revistas que leen las personas para mostrar que aún cuando son localizables, no siempre dicen la verdad.
 
+\textit{El resultado de un estudio con un muestreo es tan bueno como la muestra en qué se basa.}
 
-\underline{El resultado de un estudio con un muestreo es tan bueno como la muestra en qué se basa.}
-
-La muestra puede tener sesgos incorporados, tal como lo muestran los ejemplos de tasas de sobrevivencia al cancer y la afirmación del psiquiatra de que \textit{todo el mundo es neurótico}
-
-La muestra puede tener sesgos invisibles, por lo que hay que ser escépticos, aún cuando se ven sesgos obvios. Como le ejemplo que dan Tere elección del 32, y que se puede pensar ni algo parecido en las últimas elecciones en Costa Rica. La muestra basica es llamada \textit{aleatoria}, y es seleccionada al azar del universo en estadística significa el todo del cual la muestra es una parte.
+La muestra puede tener sesgos incorporados, tal como lo muestran los ejemplos de tasas de sobrevivencia al cancer y la afirmación del psiquiatra de que \textit{todo el mundo es neurótico}. Además la muestra puede tener sesgos invisibles, por lo que el libro recomienda ser escépticos, aún cuando se ven y se consideran sesgos obvios. Como le ejemplo que dan Tere elección del 32, y que se puede pensar ni algo parecido en las últimas elecciones en Costa Rica. La muestra basica es llamada \textit{aleatoria}, y es seleccionada al azar del universo en estadística significa el todo del cual la muestra es una parte.
 
 El muestreo aleatorio es el único que puede ser analizado estadísticamente con confianza, pero tiene limitaciones de costo. Por esto existe el muestreo aleatorio estratificado y que es una opción más económica, por lo que es lo más usado.  Para utilizar este tipo de muestreo se divide el universo en grupos de acuerdo a su prevalencia, de tal forma que tengan la misma proporción. El problema es que esa proporción puede que no sea la correcta. Y obtener una muestra aleatoria dentro de cada estrato es igual de caro. Es una guerra continua contra los orígenes de los ascos. Es importante tener en cuenta que la guerra nunca se gana por lo que hay que ser muy escéptico de los titulares de las noticias.
  
@@ -87,11 +83,15 @@ Debido a la resistencia que tienen las personas a trabajar con números y a las 
 
 \section*{Capítulo 8: \textit{Post Hoc} viene de nuevo}
 
+Este capítulo expone una de las formas más comunes de cometer errores a la hora de extraer conclusiones sobre 
+
+En inglés se dice normalmente \textit{Correlation is not Causation}, lo cual refleja claramenete lo que expone el capítulo. 
+
 \section*{Capítulo 9: Como \textit{Estaticular}}
 
 \section*{Capítulo 10: Como contestarle a una estadística}
 
-\section*{Conclusiones}
+\section*{Opinión y Conclusiones}
 
 \bibliographystyle{unsrt}.
 \bibliography{Jose_Aguilar_Tarea1.bib}
